--- a/index.html
+++ b/index.html
@@ -3,88 +3,110 @@
 <head>
   <meta charset="UTF-8" />
   <title>App Store Reviews Viewer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
       background: #f5f5f7;
       margin: 0;
-      padding: 24px;
+      padding: 16px;
     }
 
     h1 {
       margin-bottom: 16px;
+      font-size: 22px;
     }
 
     .controls {
       display: flex;
-      gap: 12px;
-      margin-bottom: 24px;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+
+    input, select, button {
+      padding: 10px 12px;
+      font-size: 15px;
+      border-radius: 6px;
     }
 
     input {
-      padding: 8px 10px;
-      font-size: 14px;
-      width: 200px;
+      flex: 1 1 240px;
+    }
+
+    select {
+      flex: 0 0 170px;
     }
 
     button {
-      padding: 8px 14px;
-      font-size: 14px;
+      background: #000;
+      color: #fff;
+      border: none;
       cursor: pointer;
+      flex: 1 1 140px;
+    }
+
+    button:active {
+      opacity: 0.85;
     }
 
     .status {
       margin-bottom: 16px;
+      font-size: 14px;
       color: #555;
     }
 
     .review {
-      background: white;
-      border-radius: 8px;
-      padding: 16px;
+      background: #fff;
+      border-radius: 10px;
+      padding: 14px;
       margin-bottom: 12px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-    }
-
-    .review-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 8px;
     }
 
     .stars {
       color: #f5a623;
       font-size: 16px;
-      letter-spacing: 1px;
+      margin-bottom: 4px;
     }
 
     .title {
       font-weight: 600;
-      margin-bottom: 6px;
+      font-size: 15px;
+      margin-bottom: 4px;
     }
 
     .meta {
       font-size: 12px;
       color: #777;
-      margin-bottom: 8px;
+      margin-bottom: 6px;
     }
 
     .content {
-      white-space: pre-wrap;
+      font-size: 14px;
       line-height: 1.4;
+      white-space: pre-wrap;
     }
   </style>
 </head>
+
 <body>
   <h1>App Store Reviews</h1>
 
   <div class="controls">
-    <input id="appIdInput" type="text" placeholder="Enter App ID" />
+    <input
+      id="appInput"
+      type="text"
+      placeholder="Paste App Store link or App ID"
+    />
+
     <select id="countryInput">
       <option value="us">United States</option>
-      <option value="dk">Denmark</option>
+      <option value="ca">Canada</option>
+      <option value="au">Australia</option>
       <option value="gb">United Kingdom</option>
+      <option value="dk">Denmark</option>
       <option value="de">Germany</option>
       <option value="fr">France</option>
       <option value="it">Italy</option>
@@ -94,6 +116,7 @@
       <option value="nl">Netherlands</option>
       <option value="jp">Japan</option>
     </select>
+
     <button id="fetchButton">Fetch Reviews</button>
   </div>
 
@@ -101,22 +124,36 @@
   <div id="reviews"></div>
 
   <script>
-    const fetchButton = document.getElementById('fetchButton');
-    const appIdInput = document.getElementById('appIdInput');
-    const countryInput = document.getElementById('countryInput');
-    const reviewsContainer = document.getElementById('reviews');
-    const statusEl = document.getElementById('status');
+    const fetchButton = document.getElementById("fetchButton");
+    const appInput = document.getElementById("appInput");
+    const countryInput = document.getElementById("countryInput");
+    const reviewsContainer = document.getElementById("reviews");
+    const statusEl = document.getElementById("status");
 
-    fetchButton.addEventListener('click', () => {
-      const appId = appIdInput.value.trim();
-      const country = countryInput.value.trim() || 'us';
-      if (!appId) return;
+    fetchButton.addEventListener("click", () => {
+      const rawInput = appInput.value.trim();
+      const country = countryInput.value;
+      const appId = extractAppId(rawInput);
 
-      reviewsContainer.innerHTML = '';
-      statusEl.textContent = 'Fetching reviews…';
+      if (!appId) {
+        statusEl.textContent = "Could not extract App ID";
+        return;
+      }
+
+      reviewsContainer.innerHTML = "";
+      statusEl.textContent = "Fetching reviews…";
 
       fetchAllPages(appId, country);
     });
+
+    function extractAppId(input) {
+      // Raw numeric ID
+      if (/^\d+$/.test(input)) return input;
+
+      // App Store URL
+      const match = input.match(/id(\d+)/);
+      return match ? match[1] : null;
+    }
 
     async function fetchAllPages(appId, country) {
       let allReviews = [];
@@ -132,16 +169,15 @@
 
           let entries = data.feed.entry;
 
-          // Page 1 includes app metadata as the first entry; skip it
-          if (page === 1 && entries.length > 0) {
+          // Page 1 includes app metadata as first entry
+          if (page === 1) {
             entries = entries.slice(1);
           }
 
           if (entries.length === 0) break;
 
           allReviews.push(...entries);
-        } catch (error) {
-          console.error(error);
+        } catch {
           break;
         }
       }
@@ -152,25 +188,22 @@
 
     function renderReviews(reviews) {
       reviews.forEach(review => {
-        const rating = Number(review['im:rating']?.label || 0);
-        const title = review.title?.label || '';
-        const content = review.content?.label || '';
-        const author = review.author?.name?.label || 'Unknown';
-        const version = review['im:version']?.label || '';
+        const rating = Number(review["im:rating"]?.label || 0);
+        const title = review.title?.label || "";
+        const content = review.content?.label || "";
+        const author = review.author?.name?.label || "Unknown";
+        const version = review["im:version"]?.label || "";
 
-        const reviewEl = document.createElement('div');
-        reviewEl.className = 'review';
-
-        reviewEl.innerHTML = `
-          <div class="review-header">
-            <div class="stars">${'★'.repeat(rating)}${'☆'.repeat(5 - rating)}</div>
-          </div>
+        const div = document.createElement("div");
+        div.className = "review";
+        div.innerHTML = `
+          <div class="stars">${"★".repeat(rating)}${"☆".repeat(5 - rating)}</div>
           <div class="title">${title}</div>
           <div class="meta">By ${author} · Version ${version}</div>
           <div class="content">${content}</div>
         `;
 
-        reviewsContainer.appendChild(reviewEl);
+        reviewsContainer.appendChild(div);
       });
     }
   </script>
