--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     }
 
     reviewsContainer.innerHTML = "";
-    statusEl.style.color = "var(--text-muted)";
+    statusEl.style.color = "var(--text-main)";
     statusEl.textContent = "Fetching reviews...";
     fetchButton.disabled = true;
     fetchButton.textContent = "Loading...";
