--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
       select {
         padding: 0 16px;
       }
+
+      input:focus {
+        background: #fff;
+        box-shadow: 0 0 0 2px var(--primary);
+      }
     
       button {
         padding: 0 12px;   /* horizontal only */
