--- a/index.html
+++ b/index.html
@@ -153,10 +153,13 @@
     .status {
       font-size: 14px;
       font-weight: 600;
-      color: var(--text-main); /* black */
+      color: var(--text-main);
       margin-bottom: 16px;
       text-transform: uppercase;
       letter-spacing: 0.05em;
+    
+      border-bottom: 1px solid #d1d5db; /* light gray divider */
+      padding-bottom: 8px;             /* space between text and divider */
     }
 
     .month-header {
