--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
     .status:not(:empty) {
       border-bottom: 1px solid #d1d5db;
       padding-bottom: 8px;
+      margin-bottom: 36px;   /* extra space between border and reviews */
     }
 
     .stars { color: #FF7F57; font-size: 18px; letter-spacing: 2px; }
