--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 
     * { box-sizing: border-box; }
 
+    html {
+      overflow-y: scroll; /* always show vertical scrollbar */
+    }
+
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       background-color: var(--bg-body);
