--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     }
 
     * { box-sizing: border-box; }
-
+    
     html {
-      overflow-y: scroll; /* always show vertical scrollbar */
+      scrollbar-gutter: stable;
     }
 
     body {
