--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       font-size: 14px;
       font-weight: 600;
       color: var(--text-main);
-      text-transform: uppercase;
+      /* text-transform: uppercase; */
       letter-spacing: 0.05em;
       flex: 1;
     }
