--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       font-size: 14px;
       font-weight: 600;
       color: var(--text-main);
-      /* text-transform: uppercase; */
+      text-transform: uppercase;
       letter-spacing: 0.05em;
       flex: 1;
     }
@@ -160,7 +160,6 @@
       margin-left: 16px;
       border-radius: 4px;
       transition: background 0.2s;
-      text-decoration: underline;   /* underlined text */
     }
 
     .copy-btn:hover { background-color: #e5e7eb; color: var(--primary); }
