--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     .status {
       font-size: 14px;
       font-weight: 600;
-      color: var(--text-main);
+      color: #344257;
       text-transform: uppercase;
       letter-spacing: 0.05em;
       flex: 1;
@@ -167,7 +167,7 @@
     .month-header {
       font-size: 14px;
       font-weight: 600;
-      color: var(--text-muted);
+      color: #9ca3af;
       margin: 32px 0 12px 0;
       text-transform: uppercase;
       letter-spacing: 0.05em;
