--- a/index.html
+++ b/index.html
@@ -165,10 +165,11 @@
 
     .month-header {
       font-size: 14px;
-      font-weight: 400;
-      color: var(--text-muted);
+      font-weight: 600;
+      /* color: var(--text-muted); */
+      color: #9ca3af;
       margin: 32px 0 12px 0;
-      text-transform: uppercase;
+      /* text-transform: uppercase; */
       letter-spacing: 0.05em;
     }
     .month-header:first-of-type { margin-top: 10px; }
