--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
       padding-bottom: 8px;
       margin-bottom: 36px;
       width: 100%;
+      flex-wrap: wrap;       /* allow wrapping to next line if needed */
+      gap: 8px;              /* spacing between items */
     }
 
     .status-container.has-reviews { border-bottom: 1px solid #d1d5db; }
@@ -143,7 +145,7 @@
       color: #344257;
       text-transform: uppercase;
       letter-spacing: 0.05em;
-      flex: 1;
+      flex: 1 1 0;           /* both try to expand equally */
     }
 
     .copy-btn {
@@ -159,6 +161,7 @@
       margin-left: 16px;
       border-radius: 4px;
       transition: background 0.2s;
+      flex: 1 1 0;           /* both try to expand equally */
     }
 
     .copy-btn:hover { background-color: #e5e7eb; color: var(--primary); }
