--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
       .status-container {
         flex-direction: column;      /* stack vertically */
         align-items: center;         /* center horizontally */
-        /* text-align: center;          /* optional: center status text */ */
+        text-align: center;          /* optional: center status text */
       }
-      /* .status, .copy-btn {
+      .status, .copy-btn {
         width: auto;                 /* let items shrink to content */
-      } */
+      }
     }
 
     /* Status + Copy Button Container */
