--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
       letter-spacing: 0.05em;
       flex: 1 1 auto;        /* takes remaining space */
       min-width: 0;           /* allows text to shrink */
+      text-align: center;     /* center text horizontally */
     }
 
     .copy-btn {
