--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
       width: 100%;
       flex-wrap: wrap;       /* allow wrapping to next line if needed */
       align-items: center;   /* vertically center items */
+      gap: 8px;
+      justify-content: center;  
     }
 
     .status-container.has-reviews { border-bottom: 1px solid #d1d5db; }
