--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       letter-spacing: 0.05em;
       
       /* Key Changes */
-      flex: 1 1 200px;   /* Grows to fill space, but has a basis that triggers wrap */
+      flex: 1 1 auto;   /* Grows to fill space, but has a basis that triggers wrap */
       text-align: left;  /* Default to left */
       min-width: fit-content;
     }
