--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       --bg-card: #ffffff;
       --text-main: #111827;
       --text-muted: #6b7280;
-      --primary: #ff5924;
-      --primary-hover: #e64d1f;
+      --primary: #000000;
+      --primary-hover: #020202;
       --border-radius: 12px;
     }
 
