--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
       margin: 0 0 12px 0;
       color: #344257;
     }
+    .title {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+    
+    .title-icon {
+      width: 28px;
+      height: 28px;
+      flex-shrink: 0;
+    }
 
     .controls {
       display: grid;
