--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     .container { max-width: 800px; margin: 0 auto; }
 
     h1 {
-      font-family: Georgia, 'Times New Roman', Times, serif;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       font-size: 24px;
       font-weight: 400;
       letter-spacing: -0.025em;
@@ -222,7 +222,7 @@
 <div class="container">
   <h1 class="title">
     <img src="logo.png" alt="" class="title-icon">
-    App Store Review Viewer
+    View Reviews
   </h1>
   <div class="controls">
     <div class="input-wrapper">
