--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     .container { max-width: 800px; margin: 0 auto; }
 
     h1 {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      font-family: Georgia, 'Times New Roman', Times, serif;
       font-size: 24px;
       font-weight: 400;
       letter-spacing: -0.025em;
